2009-11-03 Chris Allegretta <chrisa@asty.org>
	* nano.h - Fix comma at end of enumerator list which angers -pedantic.

2009-11-03 Mike Frysinger <vapier@gentoo.org>
	* files.c - Move up is_file_writable() to stop implicit definition complaints.

2009-10-27 Chris Allegretta <chrisa@asty.org>
	* browser.c (browser_init): Set column width to something sane when 
	  initializing in a directory with no file entries.  Fixes Savannah
	  bug 24163 found (and initial patch) by Paul Wise.

2009-09-15 Chris Allegretta <chrisa@asty.org>
	* winio.c: Clean up some unused variables from the soft wrapping code.

GNU nano 2.1.11 - 2009.09.14
2009-09-12 Chris Allegretta <chrisa@asty.org>
	* winio.c (edit_update) - properly update edittop when using soft wrapping.
	  Fixes lack of centering for searching for off-screen answers, found by 
	  Hannes <mr_creosote@mutantwatch.de>.

2009-09-03 Chris Allegretta <chrisa@asty.org>
	* global.c (shortcut_init): Fix up/down keys not responding in the file browser,
	  discovered by Hannes <mr_creosote@mutantwatch.de>.
	* move.c (do_up) - Fix another scrolling issue with softwrap when the
	  cursor is beyond COLS, discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-09-02 Chris Allegretta <chrisa@asty.org>
	* Attempt to check file writability and emit a warning on the status bar
	  if nano doesn't think the file can be written to.  Feature originally
	  requested by Damien Jolders <madamien@skullsquad.com> et al.

2009-08-29 Chris Allegretta <chrisa@asty.org>
	* Fix more soft wrapping issues, particularly with scrolling,
	  discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-08-19 Chris Allegretta <chrisa@asty.org>
	* Fix issue with soft wrapping not displaying the last character of each line,
	  fixed bug discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-08-17 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/(gentoo|sh|tcl).nanorc: Fix problems with empty regexes on POSIX.
	  Fixes Savannah bug 27175.
